--- a/native-android-example-pos/build.gradle
+++ b/native-android-example-pos/build.gradle
@@ -1,5 +1,5 @@
 group = 'com.clover.sdk'
-version = '2.0.0-SNAPSHOT'
+version = '2.0.0'
 
 apply plugin: 'com.android.application'
 
@@ -31,8 +31,8 @@ android {
 
 dependencies {
   // Use local project dependency in dev
-  compile 'com.clover.sdk:clover-android-connector-sdk:211-SNAPSHOT'
-  compile 'com.clover:clover-remote-interface:238-SNAPSHOT'
+  compile 'com.clover.sdk:clover-android-connector-sdk:210.1'
+  compile 'com.clover:clover-remote-interface:238.1'
   // Use published artifact when releasing
   //compile 'com.clover.sdk:clover-android-connector-sdk:1.4.1'
   compile 'org.java-websocket:Java-WebSocket:1.3.0'
