--- a/native-android-example-pos/build.gradle
+++ b/native-android-example-pos/build.gradle
@@ -16,12 +16,19 @@ android {
     minSdkVersion 17
     targetSdkVersion 17
   }
+
+  android {
+    compileOptions {
+      sourceCompatibility 1.8
+      targetCompatibility 1.8
+    }
+  }
+
   android {
     lintOptions {
       abortOnError false
     }
   }
-
 
   packagingOptions {
     exclude 'META-INF/NOTICE'
@@ -31,10 +38,8 @@ android {
 
 dependencies {
   // Use local project dependency in dev
-  compile 'com.clover.sdk:clover-android-connector-sdk:210.1'
-  compile 'com.clover:clover-remote-interface:238.1'
-  // Use published artifact when releasing
-  //compile 'com.clover.sdk:clover-android-connector-sdk:1.4.1'
+  compile 'com.clover.sdk:clover-android-connector-sdk:248.4'
+  compile 'com.clover:clover-remote-interface:243'
   compile 'org.java-websocket:Java-WebSocket:1.3.0'
   compile 'com.android.support:support-v4:21.0.0'
   compile 'com.google.code.gson:gson:2.8.0'
