--- a/native-android-example-pos/build.gradle
+++ b/native-android-example-pos/build.gradle
@@ -38,9 +38,8 @@ android {
 
 dependencies {
   // Use local project dependency in dev
-  compile 'com.clover.sdk:clover-android-connector-sdk:248.4'
-  compile 'com.clover:clover-remote-interface:243'
-  compile 'org.java-websocket:Java-WebSocket:1.3.0'
-  compile 'com.android.support:support-v4:21.0.0'
-  compile 'com.google.code.gson:gson:2.8.0'
+  implementation 'com.clover.sdk:clover-android-connector-sdk:248.4'
+  implementation 'org.java-websocket:Java-WebSocket:1.3.0'
+  implementation 'com.android.support:support-v4:21.0.0'
+  implementation 'com.google.code.gson:gson:2.8.0'
 }
