--- a/remote-pay-android-example-pos/build.gradle
+++ b/remote-pay-android-example-pos/build.gradle
@@ -4,18 +4,19 @@ version = '2.0.0'
 apply plugin: 'com.android.application'
 
 android {
+  //noinspection GradleCompatible
   compileSdkVersion 21
   buildToolsVersion '27.0.3'
 
   defaultConfig {
     minSdkVersion 17
-    targetSdkVersion 17
+    //noinspection ExpiredTargetSdkVersion
+    targetSdkVersion 25
   }
 
   lintOptions {
     abortOnError false
   }
-
 
   packagingOptions {
     exclude 'META-INF/NOTICE'
@@ -24,13 +25,11 @@ android {
 }
 
 dependencies {
-  // Use local project dependency in dev
-  compile 'com.clover:clover-remote-interface:238.1'
-  compile 'com.clover.sdk:remote-pay-android-connector:2.0.0'
-  compile 'org.java-websocket:Java-WebSocket:1.3.0'
-  compile 'com.android.support:support-v4:21.0.0'
-  compile 'com.google.code.gson:gson:2.8.0'
-  compile 'com.google.android.gms:play-services-vision:10.2.6'
+  implementation 'com.clover.sdk:remote-pay-android-connector:3.0.0'
+  implementation 'org.java-websocket:Java-WebSocket:1.3.0'
+  implementation 'com.android.support:support-v4:21.0.0'
+  implementation 'com.google.code.gson:gson:2.8.0'
+  implementation 'com.google.android.gms:play-services-vision:10.2.6'
 }
 
 
